피자가맹점, 짜장가맹점 업로드

--- a/werim_project/src/main/resources/templates/index.html
+++ b/werim_project/src/main/resources/templates/index.html
@@ -23,14 +23,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">여기저기거기</a>
+      <a class="navbar-brand" href="/">여기저기거기</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="/">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -63,30 +63,30 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="/indexcih"><img class="card-img-top" src="/images/category-02.png" alt="images"></a>
+              <a href="/chicken"><img class="card-img-top" src="/images/category-02.png" alt="images"></a>
               <div class="card-bhdy">
                 <h4 class="card-title">
-                  <a href="/indexcih">치킨</a>
+                  <a href="/chicken">치킨</a>
                 </h4>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-03.png" alt=""></a>
+              <a href="/pizza"><img class="card-img-top" src="/images/category-03.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">피자</a>
+                  <a href="/pizza">피자</a>
                 </h4>
               </div>
             </div>
           </div>
            <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-04.png" alt=""></a>
+              <a href="/middlefood"><img class="card-img-top" src="/images/category-04.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">중식</a>
+                  <a href="/middlefood">중식</a>
                 </h4>
               </div>
             </div>
