--- a/werim_project/src/main/resources/templates/middlefood.html
+++ b/werim_project/src/main/resources/templates/middlefood.html
@@ -61,10 +61,10 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="/images/kyochon.jpg" alt="">
+          <img class="card-img-top" src="/images/hongkong.png" alt="" height="300">
           <div class="card-body">
-            <h4 class="card-title">교촌치킨</h4>
-            <p class="card-text">1978년 창업한 대구통닭이 간장치킨의 원조이고 다른 치킨 브랜드와 달리 간장치킨이 간판 메뉴이다.
+            <h4 class="card-title">홍콩반점</h4>
+            <p class="card-text">백종원이 대표로 있는 (주)더본코리아의 한국식 중화 요리 프랜차이즈.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
@@ -74,11 +74,10 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="/images/puradak.jpg" alt="">
+          <img class="card-img-top" src="/images/manri.jpg" alt="" height="300">
           <div class="card-body">
-            <h4 class="card-title">푸라닭</h4>
-            <p class="card-text">'순수함＇을 뜻하는 'PURA'와 닭을 뜻하는 'DAK'의 합성어(푸라+닭)로 "치킨도 요리다"라는 
-            					순수한 믿음을 가진 순수한 사람들이 만들어 가는 브랜드를 표현하기 위해 탄생한 브랜드이다.</p>
+            <h4 class="card-title">만리장성</h4>
+            <p class="card-text">'중국집' 하면 바로 떠오르는 그 곳. 전통과 역사가 살아 숨쉬는 베스트 맛집!
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
@@ -88,11 +87,11 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="/images/bhc.jpg" alt="" height="300">
+          <img class="card-img-top" src="/images/ibiga.jpg" alt="" height="300">
           <div class="card-body">
-            <h4 class="card-title">BHC</h4>
-            <p class="card-text">1997년 별하나치킨이라는 이름으로 창립했으며 그 유명한 콜팝을 필두로 야채치킨 등의 
-            	특이한 제품으로 마이너적인 인기를 누리다가 2000년에 이니셜을 따서 BHC라는 이름을 앞세우게 되었다</p>
+            <h4 class="card-title">이비가짬뽕</h4>
+            <p class="card-text">이비가짬봉은 직접 맛을 본 고객님들이 모두 인정하는 그 맛 하나로 성공했습니다.</p>
+            					<p>지금 바로 만나보세요!</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
@@ -102,11 +101,10 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="/images/goobne.jpg" alt="" height="300">
+          <img class="card-img-top" src="/images/hong.png" alt="" height="300">
           <div class="card-body">
-            <h4 class="card-title">굽네치킨</h4>
-            <p class="card-text">기름진 후라이드 치킨을 잘 안 먹는 사람들을 위한 대표적인 브랜드!</p>
-								<p>지금 바로 만나보세요!</p>
+            <h4 class="card-title">홍짜장</h4>
+            <p class="card-text">홍짜장이라는 압도적인 브랜드 파워 14년의 명맥을 잇는 전통있는 브랜드</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
