--- a/werim_project/src/main/resources/templates/pizza.html
+++ b/werim_project/src/main/resources/templates/pizza.html
@@ -61,10 +61,10 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="/images/kyochon.jpg" alt="">
+          <img class="card-img-top" src="/images/domino.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">교촌치킨</h4>
-            <p class="card-text">1978년 창업한 대구통닭이 간장치킨의 원조이고 다른 치킨 브랜드와 달리 간장치킨이 간판 메뉴이다.
+            <h4 class="card-title">도미노피자</h4>
+            <p class="card-text">1960년 아일랜드계 미국인인 토마스 스티븐 매너한 (Thomas Stephen Monaghan)이 창업한 미국의 식품회사</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
@@ -74,11 +74,10 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="/images/puradak.jpg" alt="">
+          <img class="card-img-top" src="/images/pizzahut.gif" alt="" height="300">
           <div class="card-body">
-            <h4 class="card-title">푸라닭</h4>
-            <p class="card-text">'순수함＇을 뜻하는 'PURA'와 닭을 뜻하는 'DAK'의 합성어(푸라+닭)로 "치킨도 요리다"라는 
-            					순수한 믿음을 가진 순수한 사람들이 만들어 가는 브랜드를 표현하기 위해 탄생한 브랜드이다.</p>
+            <h4 class="card-title">피자헛</h4>
+            <p class="card-text">세계적으로 유명한 미국의 피자 체인점. 저렴한 가격에 토핑이 많이 올라가 있으니 가성비 갑!</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
@@ -88,11 +87,11 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="/images/bhc.jpg" alt="" height="300">
+          <img class="card-img-top" src="/images/59pizza.jpg" alt="" height="300">
           <div class="card-body">
-            <h4 class="card-title">BHC</h4>
-            <p class="card-text">1997년 별하나치킨이라는 이름으로 창립했으며 그 유명한 콜팝을 필두로 야채치킨 등의 
-            	특이한 제품으로 마이너적인 인기를 누리다가 2000년에 이니셜을 따서 BHC라는 이름을 앞세우게 되었다</p>
+            <h4 class="card-title">59쌀피자</h4>
+            <p class="card-text">테이크아웃을 전문으로 하는 저가 피자 브랜드의 하나. 59피자라는 명칭은 가장 기본적이며 저렴한 콤비네이션 피자가 5900원인 것에서 유래하였으며, 
+            					광고 카피인 '맛있어서 오구, 생각나서 오구' 역시 여기에서 나왔다.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
@@ -102,11 +101,11 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="/images/goobne.jpg" alt="" height="300">
+          <img class="card-img-top" src="/images/pizzanara.png" alt="" height="300">
           <div class="card-body">
-            <h4 class="card-title">굽네치킨</h4>
-            <p class="card-text">기름진 후라이드 치킨을 잘 안 먹는 사람들을 위한 대표적인 브랜드!</p>
-								<p>지금 바로 만나보세요!</p>
+            <h4 class="card-title">피자나라치킨공주</h4>
+            <p class="card-text">세트메뉴의 정석! 다른 브랜드의 세트가격보다 저렴하게 세트메뉴를 즐길 수 있다. 가성비를 생각하면 단연 원탑 브랜드!</p>
+            					
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
