--- a/werim_project/src/main/resources/templates/index.html
+++ b/werim_project/src/main/resources/templates/index.html
@@ -93,10 +93,10 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-05.png" alt=""></a>
+              <a href="/koreanfood"><img class="card-img-top" src="/images/category-05.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">한식</a>
+                  <a href="/koreanfood">한식</a>
                 </h4>
               </div>
             </div>
