카테고리추가 밎 디자인 변경

--- a/werim_project/src/main/resources/templates/chicken.html
+++ b/werim_project/src/main/resources/templates/chicken.html
@@ -13,8 +13,9 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Custom styles for this template -->
+  <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
+  <link href="css/cartegori2.css" rel="stylesheet" >
 
 </head>
 
@@ -46,6 +47,30 @@
       </div>
     </div>
   </nav>
+  
+       <!-- 기본 가테고리  -->
+<div id="menu1"> 
+      <ul>
+	<li><a href="chicken">치킨</a></li>
+	<li><a href="pizza">피자</a></li>
+	<li><a href="middlefood">중식</a></li>
+	<li><a href="①">한식</a></li>
+	<li><a href="①">일식/돈까스</a></li>
+	<li><a href="①">족발/보쌈</a></li>
+	<li><a href="①">야식</a></li>
+	<li><a href="①">분식</a></li>
+	<li><a href="①">카페/디저트</a></li>
+	<style>
+ul{
+   list-style:none;
+   }
+</style>
+      </ul>
+</div>
+
+  <!-- Page Content -->
+  <div class="container">
+  
     <!-- Page Features -->
     <div class="row text-center">
 
