--- a/werim_project/src/main/resources/templates/homeLayout.html
+++ b/werim_project/src/main/resources/templates/homeLayout.html
@@ -45,10 +45,10 @@
           </li>
         </ul>
       </div>
+
     </div>
+
   </nav>
-  
-         <!-- 기본 가테고리  -->
 <div id="menu1"> 
       <ul>
 	<li><a href="chicken">치킨</a></li>
@@ -68,8 +68,12 @@ ul{
       </ul>
 </div>
 
+
+
   <!-- Page Content -->
   <div class="container">
+
+  
 
     <div class="row">
       </div>
@@ -114,10 +118,10 @@ ul{
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="/koreanfood"><img class="card-img-top" src="/images/category-05.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="/images/category-05.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="/koreanfood">한식</a>
+                  <a href="#">한식</a>
                 </h4>
               </div>
             </div>
