--- a/werim_project/src/main/resources/templates/index.html
+++ b/werim_project/src/main/resources/templates/index.html
@@ -36,6 +36,7 @@
           </li>
           <li class="nav-item">
             <a sec:authorize-expr="!isAuthenticated()" class="nav-link" href="/login">Login</a>
+             <a sec:authorize-expr="isAuthenticated()" class="nav-link" href="/userLayout">마이페이지</a>
             <a sec:authorize-expr="isAuthenticated()" class="nav-link" href="javascript:logout();">Logout</a>
             <form id="logout" method="post" th:action="@{/logout}"></form>
             <script>function logout(){
