--- a/werim_project/src/main/resources/templates/registration.html
+++ b/werim_project/src/main/resources/templates/registration.html
@@ -154,12 +154,12 @@
 				</div>
 				<div class="form-group">
 				<div class="col-sm-9">
-				<input type="text" id="sample4_postcode" placeholder="우편번호">
+				<input type="text" id="sample4_postcode" th:field="*{zonecode}" placeholder="우편번호">
 <input type="button" onclick="sample4_execDaumPostcode()" value="우편번호 찾기"><br>
-<input type="text" id="sample4_roadAddress" placeholder="도로명주소">
+<input type="text" id="sample4_roadAddress" th:field="*{address}" placeholder="도로명주소">
 <input type="text" id="sample4_jibunAddress" placeholder="지번주소">
 <span id="guide" style="color:#999;display:none"></span>
-<input type="text" id="sample4_detailAddress" placeholder="상세주소">
+<input type="text" id="sample4_detailAddress" th:field="*{address2}" placeholder="상세주소">
 <input type="text" id="sample4_extraAddress" placeholder="참고항목">
 <div class="form-group">
 </div>
