--- a/werim_project/src/main/resources/templates/index.html
+++ b/werim_project/src/main/resources/templates/index.html
@@ -37,12 +37,12 @@
           </li>
           <li class="nav-item">
             <a sec:authorize-expr="!isAuthenticated()" class="nav-link" href="/login">Login</a>
-             <a sec:authorize-expr="isAuthenticated()" class="nav-link" href="/userLayout">마이페이지</a>
+             <a sec:authorize-expr="isAuthenticated()" class="nav-link" th:href="@{/user/userLayout}">마이페이지</a>
             <a sec:authorize-expr="isAuthenticated()" class="nav-link" href="javascript:logout();">Logout</a>
             <form id="logout" method="post" th:action="@{/logout}"></form>
             <script>function logout(){
-               $('#logout').submit();
-            }</script>
+               $('#logout').submit();}
+            </script>
           </li>
         </ul>
       </div>
