--- a/werim_project/src/main/resources/templates/user/userLayout.html
+++ b/werim_project/src/main/resources/templates/user/userLayout.html
@@ -32,7 +32,7 @@
 						<a th:href="@{'/userUpdate'}">내정보수정</a>
 					</li>
 					<li role="presentation">
-						<a th:href="@{'#'}">회원탈퇴</a>
+						<a th:href="@{'/user/userDelete'}">회원탈퇴</a>
 					</li>
 				</ul>
 			</div>
@@ -42,7 +42,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-10 col-sm-offset-2 main">
-				<div th:include="__${contents}__">메인입니다</div>
+				<!-- div th:if="__${contents != null}__" th:include="__${contents}__">메인입니다</div> -->
 			</div>
 		</div>
 	</div>
