--- a/werim_project/src/main/resources/templates/user/userDelete.html
+++ b/werim_project/src/main/resources/templates/user/userDelete.html
@@ -8,16 +8,11 @@
 	<div th:fragment="userDelete_contents">
 		<div class="container">
 			<div class="col-sm-5">
-				<h1>사용자 수정</h1>
-				
-				<form method="post" th:action="@{/userDelete}"
-					th:object="${userInfo}">
-					<input type="hidden" name="user_id" th:field="*{user_id}"/>
-								<button class="btn btn-danger btn-lg" type="submit" name="delete">삭제</button>
-						
+				<h1>정말로 탈퇴하시겠습니까??</h1>		
+				<form method="post" th:action="@{/user/userDelete}">
+								<button class="btn btn-danger btn-lg" type="submit" name="delete">탈퇴</button>		
 				</form>
-			</div>
-			
+			</div>	
 		</div>
 	</div>
 </body>
