--- a/werim_project/src/main/resources/templates/user/userLayout.html
+++ b/werim_project/src/main/resources/templates/user/userLayout.html
@@ -41,8 +41,8 @@
 	<!-- 컨텐츠 -->
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-10 col-sm-offset-2 main">
-				<!-- div th:if="__${contents != null}__" th:include="__${contents}__">메인입니다</div> -->
+			<div class="col-sm-10 col-sm-offset-2 main" th:if="${contents != null}">
+				<div  th:include="__${contents}__">메인입니다</div>
 			</div>
 		</div>
 	</div>
