--- a/werim_project/src/main/resources/templates/user/userLayout.html
+++ b/werim_project/src/main/resources/templates/user/userLayout.html
@@ -15,7 +15,7 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="/index">여기저기거기</a>
+				<a class="navbar-brand" href="/">여기저기거기</a>
 			</div>
 			<form method="POST" th:action="@{/logout}">
 				<button class="btn btn-link pull-right navbar-brand"
@@ -29,7 +29,7 @@
 			<div class="col-sm-2 sidebar">
 				<ul class="nav nav-pills nav-stacked">
 					<li role="presentation">
-						<a th:href="@{'/userUpdate'}">내정보수정</a>
+						<a th:href="@{'/user/userUpdate'}">내정보수정</a>
 					</li>
 					<li role="presentation">
 						<a th:href="@{'/user/userDelete'}">회원탈퇴</a>
