--- a/werim_project/src/main/resources/templates/store/register.html
+++ b/werim_project/src/main/resources/templates/store/register.html
@@ -10,32 +10,74 @@
 <body>
 
 <div th:fragment="store-register-page" class="container">
-<form th:action="@{/store/register}">
+<form method="post" th:object="${store}" th:action="@{/store/register}">
+<input type="hidden" th:field="*{user_id}">
 <table>
 	<tr>
 		<td><label>점포명</label></td>
-		<td colspan="2"><input type="text" required><br></td>
+		<td colspan="2"><input type="text" th:field="*{name}" required><br></td>
 	</tr>
 	<tr>
 		<td><label>점포주명</label></td>
-		<td colspan="2"><input type="text" required></td>
+		<td colspan="2"><input type="text" th:field="*{owner_name}" required></td>
+	</tr>
+	<tr>
+		<td><label>점포로고</label></td>
+		<td><img style="width: 100px; height:100px;" id="img"></td>
+		<td><input type="file" name="file" id="file" accept="image/png, image/jpeg, image/jpg, image/gif">
+		<script>
+			var reader = new FileReader();
+			reader.onload = function(event){
+				$('#img').attr('src', event.target.result);
+			};
+
+		$('#file').on('change',function(result){			
+			reader.readAsDataURL(result.target.files[0]);
+		});
+		</script>
+		</td>
 	</tr>
 	<tr>
 		<td><label>사업자번호</label></td>
-		<td colspan="2"><input type="text"></td>
+		<td colspan="2"><input th:field="*{business_number}" type="text"></td>
 	</tr>
 	<tr>
 		<td><label>주소</label></td>
-		<td><input type="text" id="address"></td>
+		<td><input th:field="*{address}" type="text" id="address"></td>
 		<td><button id="search">주소검색</button></td>
 	</tr>
 	<tr>
 		<td><label>전화번호</label></td>
-		<td colspan="2"><input type="tel"></td>
+		<td colspan="2"><input th:field="*{tel}" type="tel"></td>
 	</tr>
 	<tr>
 		<td><label>프렌차이즈</label></td>
-		<td colspan="2"><input type="text"></td>
+		<td colspan="2"><select th:field="*{franchise}">
+		<option value="-2">프랜차이즈</option>
+		<option value="-1">없음</option>
+		<th:block th:each="option : ${fran_list}">
+			<option th:value="${option.franchise_pk}" th:text="${option.name}"></option>
+		</th:block>
+		</select>
+		</td>
+	</tr>
+	<tr>
+		<td><label>카테고리</label></td>
+		<td colspan="2">
+		<select th:field="*{category}">
+		<option value="-2">카테고리</option>
+		<option value="0">중식</option>
+		<option value="1">한식</option>
+		</select>
+		</td>
+	</tr>
+	<tr>
+		<td><label>최소주문금액</label></td>
+		<td colspan="2"><input type="number" th:field="*{min_price}"></td>
+	</tr>
+	<tr>
+		<td><label>원산지표기</label></td>
+		<td colspan="2"><input type="text" th:field="*{origin_info}"></td>
 	</tr>
 	<tr><td colspan="3" class="text-right"><input type="submit" class="btn btn-primary" value="등록"></td></tr>
 </table>
@@ -46,6 +88,7 @@
 $('#search').on('click',function(){
 	new daum.Postcode({
         oncomplete: function(data) {
+        	console.log('asdf');
             $('#address').val(data.roadAddress);
         }
     }).open();
