userLayout으로 store 컨트롤러 내용 이동

--- a/werim_project/src/main/resources/templates/user/userLayout.html
+++ b/werim_project/src/main/resources/templates/user/userLayout.html
@@ -31,6 +31,9 @@
 					<li role="presentation">
 						<a th:href="@{'/user/userUpdate'}">내정보수정</a>
 					</li>
+					<li>
+						<a th:href="@{/store/request}">점포</a>
+					</li>
 					<li role="presentation">
 						<a th:href="@{'/user/userDelete'}">회원탈퇴</a>
 					</li>
