--- a/werim_project/src/main/resources/templates/boonsik.html
+++ b/werim_project/src/main/resources/templates/boonsik.html
@@ -13,49 +13,18 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Custom styles for this template -->
+  <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
+  <link href="css/cartegori2.css" rel="stylesheet" >
 
 </head>
 
 <body>
 
- <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="/">여기저기거기</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
   <!-- Page Content -->
-  <div class="container">
-   <!-- 기본 가테고리  -->
-<div class="SMS_BaseMenu_01 JKJ_loginDisplay"> 
-   <div class="container_Box">
-      <ul>
-	<li><a href="①">③MENU<span>|</span></a></li>
-	<li><a href="①">③MENU<span>|</span></a></li>
-	<li><a href="①">③MENU<span>|</span></a></li>
-	<li><a href="①">③MENU<span>|</span></a></li>
-	<li><a href="①">③MENU</a></li>
-      </ul>
-   </div>
-</div>
+	<div class="container" th:fragment="boonsik_contents">
+
+
     <!-- Page Features -->
     <div class="row text-center">
 
@@ -107,28 +76,14 @@
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">  주    문  </a>
-          </div>
+                </div>
         </div>
       </div>
 
     </div>
-    <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+			
+		</div>
+	
 </body>
 
-</html>
+<body>
