--- a/werim_project/src/main/resources/templates/chicken.html
+++ b/werim_project/src/main/resources/templates/chicken.html
@@ -20,61 +20,16 @@
 </head>
 
 <body>
-
- <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="/">여기저기거기</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a sec:authorize-expr="!isAuthenticated()" class="nav-link" href="/login">Login</a>
-            <a sec:authorize-expr="isAuthenticated()" class="nav-link" href="javascript:logout();">Logout</a>
-            <form id="logout" method="post" th:action="@{/logout}"></form>
-            <script>function logout(){
-               $('#logout').submit();
-            }</script>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  
-       <!-- 기본 가테고리  -->
-<div id="menu1"> 
-      <ul>
-	<li><a href="chicken">치킨</a></li>
-	<li><a href="pizza">피자</a></li>
-	<li><a href="middlefood">중식</a></li>
-	<li><a href="①">한식</a></li>
-	<li><a href="①">일식/돈까스</a></li>
-	<li><a href="①">족발/보쌈</a></li>
-	<li><a href="①">야식</a></li>
-	<li><a href="①">분식</a></li>
-	<li><a href="①">카페/디저트</a></li>
-	<style>
-ul{
-   list-style:none;
-   }
-</style>
-      </ul>
-</div>
-
-  <!-- Page Content -->
-  <div class="container">
-  
-    <!-- Page Features -->
+ <!-- Page Content -->
+	<div class="container" th:fragment="chicken_contents">
+		
+			
+			
+			
+				<!-- Page Features -->
     <div class="row text-center">
 
-      <div class="col-lg-3 col-md-6 mb-4">
+      <div class="col-lg-3 col-md-6 mb-4" th:fragment="chicken_contents">
         <div class="card h-100">
           <img class="card-img-top" src="/images/kyochon.jpg" alt="">
           <div class="card-body">
@@ -130,23 +85,7 @@ ul{
       </div>
 
     </div>
-    <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+			
+		</div>
+	
 </body>
-
-</html>
