--- a/werim_project/src/main/resources/templates/contener.html
+++ b/werim_project/src/main/resources/templates/contener.html
@@ -1,75 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Shop Homepage - Start Bootstrap Template</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
-  <link href="css/cartegori2.css" rel="stylesheet" >
-
+	<meta charset="UTF-8" />
+	<title>목록</title>
 </head>
 
-<body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="/">여기저기거기</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a sec:authorize-expr="!isAuthenticated()" class="nav-link" href="/login">Login</a>
-             <a sec:authorize-expr="isAuthenticated()" class="nav-link" th:href="@{/user/userLayout}">마이페이지</a>
-            <a sec:authorize-expr="isAuthenticated()" class="nav-link" href="javascript:logout();">Logout</a>
-            <form id="logout" method="post" th:action="@{/logout}"></form>
-            <script>function logout(){
-               $('#logout').submit();}
-            </script>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  
-         <!-- 기본 가테고리  -->
-<div id="menu1"> 
-      <ul>
-	<li><a href="chicken">치킨</a></li>
-	<li><a href="pizza">피자</a></li>
-	<li><a href="middlefood">중식</a></li>
-	<li><a href="koreanfood">한식</a></li>
-	<li><a href="japanesefood">일식/돈까스</a></li>
-	<li><a href="jokbo">족발/보쌈</a></li>
-	<li><a href="yasik">야식</a></li>
-	<li><a href="boonsik">분식</a></li>
-	<li><a href="cafe">카페/디저트</a></li>
-	<style>
-ul{
-   list-style:none;
-   }
-</style>
-      </ul>
-</div>
-
-  <!-- Page Content -->
+<!-- Page Content -->
   <div class="container">
 
     <div class="row">
@@ -183,20 +121,7 @@ ul{
     <!-- /.row -->
 
   </div>
-  <!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
-</html>
+  
+  
+  </html>
+ 
