--- a/werim_project/src/main/resources/templates/homeLayout.html
+++ b/werim_project/src/main/resources/templates/homeLayout.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Shop Homepage - Start Bootstrap Template</title>
-
+	<title>Admin</title>
+	<meta charset="UTF-8"/>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+ 
+  
 
   <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
+ 
   <link href="css/cartegori2.css" rel="stylesheet" >
-
+  
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>	
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
 </head>
-
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+	 <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="margin-bottom: 0px;">
     <div class="container">
       <a class="navbar-brand" href="/">여기저기거기</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,169 +35,103 @@
           </li>
           <li class="nav-item">
             <a sec:authorize-expr="!isAuthenticated()" class="nav-link" href="/login">Login</a>
+             <a sec:authorize-expr="isAuthenticated()" class="nav-link" th:href="@{/user/userLayout}">마이페이지</a>
             <a sec:authorize-expr="isAuthenticated()" class="nav-link" href="javascript:logout();">Logout</a>
             <form id="logout" method="post" th:action="@{/logout}"></form>
             <script>function logout(){
-               $('#logout').submit();
-            }</script>
+               $('#logout').submit();}
+            </script>
           </li>
         </ul>
       </div>
-
     </div>
-
   </nav>
-<div id="menu1"> 
-      <ul>
-	<li><a href="chicken">치킨</a></li>
-	<li><a href="pizza">피자</a></li>
-	<li><a href="middlefood">중식</a></li>
-	<li><a href="①">한식</a></li>
-	<li><a href="①">일식/돈까스</a></li>
-	<li><a href="①">족발/보쌈</a></li>
-	<li><a href="①">야식</a></li>
-	<li><a href="①">분식</a></li>
-	<li><a href="①">카페/디저트</a></li>
+	<!-- 사이드바 -->
+	
+	<div class="container-fluid">
+		<div class="row">
+			<div id="menu1">
+				<ul class="nav nav-pills nav-stacked">
+					<li role="presentation">
+						<a th:href="@{'chicken'}">치킨</a>
+					</li>
+					<li role="presentation">
+						<a th:href="@{'pizza'}">피자</a>
+					</li>
+					
+					<li role="presentation">
+						<a th:href="@{'middlefood'}">중식</a>
+					</li>
+					
+					<li role="presentation">
+						<a th:href="@{'koreanfood'}">한식</a>
+					</li>
+					
+					<li role="presentation">
+						<a th:href="@{'japanesefood'}">일식/돈까스</a>
+					</li>
+					
+					<li role="presentation">
+						<a th:href="@{'jokbo'}">족발/보쌈</a>
+					</li>
+					
+					<li role="presentation">
+						<a th:href="@{'yasik'}">야식</a>
+					</li>
+					
+					<li role="presentation">
+						<a th:href="@{'boonsik'}">분식</a>
+					</li>
+					
+					<li role="presentation">
+						<a th:href="@{'cafe'}">카페/디저트</a>
+					</li>
+					
 	<style>
-ul{
-   list-style:none;
-   }
+
 </style>
-      </ul>
+				
+
+
+		</div>
+	</div>	
+	
+	
 </div>
 
 
 
-  <!-- Page Content -->
-  <div class="container">
 
-  
 
-    <div class="row">
-      </div>
-      <!-- /.col-lg-3 -->
 
-      <div class="col-lg-9">
+	      
 
-        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
- 
 
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="/chicken"><img class="card-img-top" src="/images/category-02.png" alt="images"></a>
-              <div class="card-bhdy">
-                <h4 class="card-title">
-                  <a href="/chicken">치킨</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="/pizza"><img class="card-img-top" src="/images/category-03.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="/pizza">피자</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-           <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="/middlefood"><img class="card-img-top" src="/images/category-04.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="/middlefood">중식</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-05.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">한식</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-<div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-06.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">일식/돈까스</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-<div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-07.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">족발/보쌈</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-<div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-08.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">야식</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-09.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">분식</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/images/category-11.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">카페/디저트</a>
-                </h4>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- /.row -->
-
-      </div>
-      <!-- /.col-lg-9 -->
-
-    </div>
-    <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
-
-  <!-- Footer -->
+	<!-- 컨텐츠 -->
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-12  main" th:if="${contents != null}">
+				<div  th:include="__${contents}__">메인입니다</div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
       <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
     </div>
     <!-- /.container -->
   </footer>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  
 </body>
-
 </html>
+
+
+
+
+
+
+
+
+
