점포 리스트 추가 점포 리스트 삭제 추가 점포 추가 폼,db삽입 구현(미완성)

--- a/werim_project/src/main/resources/templates/user/store/register.html
+++ b/werim_project/src/main/resources/templates/user/store/register.html
@@ -10,8 +10,8 @@
 <body>
 
 <div th:fragment="store-register-page" class="container">
-<form method="post" th:object="${store}" th:action="@{/store/register}">
-<input type="hidden" th:field="*{user_id}">
+<form enctype="multipart/form-data" method="post" th:object="${store}" th:action="@{/store/register}">
+<input type="hidden" th:field="*{userId}">
 <table>
 	<tr>
 		<td><label>점포명</label></td>
