--- a/werim_project/src/main/resources/templates/user/userLayout.html
+++ b/werim_project/src/main/resources/templates/user/userLayout.html
@@ -32,7 +32,8 @@
 						<a th:href="@{'/user/userUpdate'}">내정보수정</a>
 					</li>
 					<li>
-						<a th:href="@{/store/request}">점포</a>
+						<a th:if="${#authentication.principal.userinfo.store_state != '2'}" th:href="@{/store/request}">점포</a>
+						<a th:if="${#authentication.principal.userinfo.store_state == '2'}" th:href="@{/store/store-list}">점포</a>
 					</li>
 					<li role="presentation">
 						<a th:href="@{'/user/userDelete'}">회원탈퇴</a>
