store-list 이미지 없는 경우 안 나오던 수정

--- a/werim_project/src/main/resources/templates/user/store/store-list.html
+++ b/werim_project/src/main/resources/templates/user/store/store-list.html
@@ -7,11 +7,7 @@
 <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-<style  type="text/css" >
-.test:hover{
-	cursor: pointer;
-}
-</style>
+
 <div th:fragment="store-list-page" class="container">
 <div th:if="${#authentication.principal.userinfo.store_state == '2'}" class="row">
 <table border="1" class="table table-hover">
@@ -25,7 +21,10 @@
 	</thead>
 	<tbody>
 		<tr th:each="store : ${store_list}" >
-			<td><a th:href="|/store/menu/${store.store_pk}|"><img width="100" height="100" th:src="|data:${store.logo_file.contentType};base64,${store.logo_file.base64}|"></a></td>
+			<td><a th:href="|/store/menu/${store.store_pk}|">
+			<img th:if="${store.logo_file != null}" width="100" height="100" th:src="|data:${store.logo_file.contentType};base64,${store.logo_file.base64}|">
+			<img th:if="${store.logo_file == null}" width="100" height="100" th:src="@{/images/none.png}">
+			</a></td>
 			<td><a th:href="|/store/menu/${store.store_pk}|"><span th:text="${store.name}"></span></a></td>
 			<td><form method="post" th:action="@{|/store/delete/${store.store_pk}|}"><button class="btn btn-danger" >삭제</button>
 			</form>
