--- a/werim_project/src/main/resources/templates/user/userLayout.html
+++ b/werim_project/src/main/resources/templates/user/userLayout.html
@@ -3,6 +3,7 @@
 <head>
 	<title>User</title>
 	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" 
 		th:href="@{/css/admin.css}"
 		href="../../static/css/admin.css"/>
